@@ -1,20 +1,34 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
- * User Manual available at https://docs.gradle.org/6.8.2/userguide/building_java_projects.html
- */
-
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
-    id 'application'
+    id 'java'
+    id "application"
     id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
+    compileJava {
+        doFirst {
+            options.compilerArgs += [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.controls',
+            '--add-modules', 'javafx.fxml',
+            '--add-modules', 'javafx.graphics',
+            '--add-modules', 'javafx.base',
+            ]
+            classpath = files()
+        }
+    }
+
+apply plugin: 'java'
+
 javafx {
-    version = "16"
-    modules = [ 'javafx.controls' ]
+    sdk = System.getProperty("user.dir") + '\\JavaFX SDK'
+    version = '12'
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+mainClassName = 'hotelproject.launcher'
+
+run{
+    standardInput = System.in
 }
 
 repositories {
@@ -22,17 +36,6 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit test framework.
-    testImplementation 'junit:junit:4.13'
-
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:29.0-jre'
-
-    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
-}
-
-application {
-    // Define the main class for the application.
-    mainClass = 'hotelproject.ProjectTest'
 }
